<resources>
    <string name="AMRGo">GO</string>
    <string name="AMRVersion">2.1.7</string>
    <string name="AMR_experiment_detail">(%1$s ** %2$s)</string>
    <string name="AMR_text_ad">Ad</string>
    <string name="AMR_text_ad_all_caps">AD</string>
    <string name="AMR_text_adv_id">Adv Id:</string>
    <string name="AMR_text_amr_sdk_version">AMR SDK Version:</string>
    <string name="AMR_text_app_id">App Id:</string>
    <string name="AMR_text_available_networks">Available Networks</string>
    <string name="AMR_text_back">BACK</string>
    <string name="AMR_text_c">C</string>
    <string name="AMR_text_calculated">| Calculated:</string>
    <string name="AMR_text_deneme">deneme</string>
    <string name="AMR_text_info_big">INFO</string>
    <string name="AMR_text_install">Install Now</string>
    <string name="AMR_text_n">N</string>
    <string name="AMR_text_network">Network</string>
    <string name="AMR_text_only_line">|</string>
    <string name="AMR_text_panel_popup_info">This panel and pop ups are only shown to testers</string>
    <string name="AMR_text_priority_1">Priority 1</string>
    <string name="AMR_text_raw">| Raw:</string>
    <string name="AMR_text_read_more">Read More</string>
    <string name="AMR_text_s">S</string>
    <string name="AMR_text_sdk_information">SDK Information</string>
    <string name="AMR_text_sdk_version">ADMOST SDK Version:</string>
    <string name="AMR_text_sponsored">Sponsored</string>
    <string name="AMR_text_test_i">i</string>
    <string name="AMR_text_test_suite_load">LOAD</string>
    <string name="AMR_text_test_suite_placement">PLACEMENT</string>
    <string name="AMR_text_test_suite_show">SHOW</string>
    <string name="AMR_text_test_suite_title">AMR TEST SUITE</string>
    <string name="AMR_text_test_suite_zone">ZONE</string>
    <string name="AMR_text_weight_fp">| Weight-FP:</string>
    <string name="AMR_text_x">X</string>
    <string name="AdMost_go_text">DOWNLOAD NOW</string>
    <string name="AdMost_loading">Loading</string>
    <string name="AdMost_text_skip">SKIP &gt;&gt;</string>
    <string name="AdMost_text_x">X</string>
    <string name="AdMost_video_close">Close</string>
    <string name="AdMost_video_connection_explanation">Please check your connection. Do you want to close video?</string>
    <string name="AdMost_video_connection_title">INTERNET CONNECTION ERROR</string>
    <string name="AdMost_video_continue">Continue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_id">869440837065</string>
    <string name="app_name">Head Ball 2</string>
    <string name="applovin_instructions_dialog_title">Instructions</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="cancel">Cancel</string>
    <string name="close_button">Close Button</string>
    <string name="com.crashlytics.android.build_id">13b4075b-13ed-4d26-9fba-01d0064c989e</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="date_format_month_day">EEEE, MMMM d</string>
    <string name="date_format_year_month_day">EEEE, MMMM d yyyy</string>
    <string name="default_web_client_id">869440837065-putl4tmk496rq3pegml34nh1p4aoqd61.apps.googleusercontent.com</string>
    <string name="empty" />
    <string name="enter_code_caps">KOD GİR</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="facebook_app_id">694567537408547</string>
    <string name="failed_to_get_more">Failed to load more.</string>
    <string name="failed_to_load">Failed to load.</string>
    <string name="failed_to_refresh">Failed to refresh.</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://online-head-ball-2-new-9348213.firebaseio.com</string>
    <string name="gcm_defaultSenderId">869440837065</string>
</resources>