<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:id="@+id/activity_main" android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <VideoView android:id="@+id/simpleVideoView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
    <ImageView android:id="@+id/amr_pauseIcon" android:visibility="gone" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/pause_icon" android:layout_centerInParent="true"/>
    <ImageButton android:id="@+id/amr_ad_close" android:padding="20dp" android:visibility="invisible" android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/ad_close_timer" android:scaleType="matrix" android:layout_alignParentTop="true" android:layout_alignParentRight="true" style="@style/AdMostButtonTransparent"/>
    <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/amr_ad_close_text" android:padding="20dp" android:visibility="invisible" android:layout_width="80dp" android:layout_height="80dp" android:text="@string/AdMost_text_x" android:layout_alignParentTop="true" android:layout_alignParentRight="true"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/amr_ad_extra_layout" android:background="@color/ADMOSTTransparent" android:padding="20dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="60dp" android:layout_alignParentBottom="true">
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/amr_ad_headline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="HeadLine"/>
        <TextView android:textSize="14sp" android:typeface="normal" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/amr_ad_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Body"/>
    </LinearLayout>
    <TextView android:textSize="14dp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/amr_ad_skip_text" android:background="@color/ADMOSTTransparent" android:padding="20dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="60dp" android:text="@string/AdMost_text_skip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true"/>
    <TextView android:textSize="20dp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/loading_video" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AdMost_loading" android:layout_centerInParent="true"/>
</RelativeLayout>
